fixes padding for home on mobile

--- a/main.scss
+++ b/main.scss
@@ -24,7 +24,8 @@ header .navbar-brand h1{
 
 
 #home{
-    padding:70px 0;
+    padding-top:126px;
+    
 }
 #about {
 //    padding:55px;
@@ -443,6 +444,9 @@ header .navbar-brand h1{
 //     font-size:3em !important;
 //   }
 // }
+
+    
+
 @media (max-width: 1200px) {
     .navbar-header {
         float: none;
